# embers

./: .devcontainer.json  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  Makefile.toml  README.md  schema.json
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.devcontainer/cargo-tools/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: devcontainer.yaml  embers.yaml  generate_schema.yaml
.github/workflows/actions/setup-rust/: action.yaml
docker/: demo-docker-compose.yaml  docker-compose-staging.yaml  docker-compose.yaml  embers.dev.dockerfile  embers.dockerfile  events-sync.dockerfile  firefly.dockerfile  nginx.conf  state-sync.dockerfile
docker/mainnet/genesis/: wallets.txt
docker/testnet/genesis/: wallets.txt
docs/: F1R3FLY_RECOMMENDATIONS.md  PROJECT_STRUCTURE.md  README.md  ToDos.md  deployment.md
docs/architecture/decisions/: ADR-template.md
events-sync/: Cargo.toml
events-sync/src/: main.rs
firefly-api/: Cargo.toml
firefly-api/src/: lib.rs  read_node_client.rs  write_node_client.rs
firefly-api/src/write_node_client/: helpers.rs
server/: Cargo.toml
server/src/: api.rs  configuration.rs  domain.rs  main.rs  storage.rs
server/src/api/: models.rs  wallet.rs
server/src/domain/: models.rs  wallet.rs
server/src/storage/: firefly.rs  templates.rs
server/templates/: set_transfer.rho
state-sync/: Cargo.toml
state-sync/src/: main.rs
