[package]
edition = "2024"
name    = "server"
publish = false
version = "0.1.0"

[dependencies]
anyhow             = { version = "1.0", features = ["std"] }
blake2             = { version = "0.10" }
bs58               = { version = "0.5" }
derive_more        = { version = "2.0", features = ["constructor"] }
figment            = { version = "0.10", features = ["env"] }
firefly-api        = { path = "../firefly-api" }
hex                = { version = "0.4" }
poem               = { version = "3.1", features = ["anyhow"] }
poem-openapi       = { version = "5.1", features = ["swagger-ui"] }
sailfish           = { version = "0.9" }
secp256k1          = { version = "0.31", features = ["serde"] }
serde              = { version = "1.0" }
serde_json         = { version = "1.0" }
structural-convert = { version = "0.13" }
tokio              = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }

[lints.clippy]
default_trait_access = "allow"
implicit_hasher      = "allow"
missing_errors_doc   = "allow"
must_use_candidate   = "allow"
too_many_lines       = "allow"

[lints.clippy.pedantic]
level    = "warn"
priority = -1

[lints.clippy.nursery]
level    = "warn"
priority = -1
